// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_CLEAR 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {},
    },
  },
  "type": "SET_QUERY_CLEAR",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_GRANULARITY_RHSM 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {
        "granularity": "lorem granularity",
      },
    },
  },
  "type": "SET_QUERY_GRANULARITY_RHSM",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_PAGE_LIMIT_RHSM 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {
        "limit": 10,
      },
    },
  },
  "type": "SET_QUERY_PAGE_LIMIT_RHSM",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_PAGE_OFFSET_RHSM 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {
        "offset": 10,
      },
    },
  },
  "type": "SET_QUERY_PAGE_OFFSET_RHSM",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_SLA_RHSM 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {
        "sla": "lorem sla",
      },
    },
  },
  "type": "SET_QUERY_SLA_RHSM",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_USAGE_RHSM 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {
        "usage": "ipsum usage",
      },
    },
  },
  "type": "SET_QUERY_USAGE_RHSM",
}
`;
